# CryptoQuant-Engine

./: .env.example  .gitignore  FREE_CRYPTO_DATA_SOURCES_REPORT.md  PLANNING.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  run_tests.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  dependencies.py  middleware.py  schemas.py  websocket.py  ws_bridge.py
backend/app/backtesting/: __init__.py  data_loader.py  engine.py  job_runner.py  metrics.py  monte_carlo.py  optimizer.py  quantstats_report.py  report.py  simulator.py  strategy_factory.py  walk_forward.py
backend/app/bot/: __init__.py  service.py
backend/app/config/: constants.py  exchanges.py  settings.py
backend/app/core/: events.py  exceptions.py  models.py
backend/app/data/: collector.py
backend/app/db/: database.py  models.py  redis_client.py  session.py
backend/app/execution/: __init__.py  executor.py  live_trader.py  order_manager.py  paper_trader.py  position_tracker.py
backend/app/indicators/: __init__.py  base.py  momentum.py  streaming.py  trend.py  volatility.py  volume.py
backend/app/ml/: __init__.py  enhancer.py
backend/app/risk/: __init__.py  circuit_breaker.py  dca.py  evaluator.py  portfolio.py  position_sizer.py  stop_loss.py
backend/app/services/: orderbook_streamer.py  price_streamer.py
backend/app/signals/: __init__.py  aggregator.py  regime.py  volatility_model.py
backend/app/strategies/: __init__.py  base.py  funding.py  mean_reversion.py  momentum.py  order_block_zones.py  smc.py  volume.py
backend/app/utils/: logger.py
backend/app/zones/: __init__.py  detector.py  models.py  scorer.py
backend/scripts/: diagnose_signals.py  seed_data.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_api_crud.py  test_backtest_e2e.py  test_server_health.py
(+203 files in other folders)
