[project]
name = "cryptoquant-engine"
version = "0.1.0"
description = "Crypto Quantitative Trading Platform"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # Numerical
    "numpy>=1.26",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Redis
    "redis[hiredis]>=5.0",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # Logging
    "structlog>=24.0",
    "orjson>=3.9",
    # HTTP
    "httpx>=0.27",
]

[project.optional-dependencies]
trading = [
    # Exchange
    "ccxt>=4.0",
    # Data processing
    "pandas>=2.0",
    "numpy>=1.26",
    # Notifications
    "python-telegram-bot>=21.0",
]
ml = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "onnxruntime>=1.17",
    "skl2onnx>=1.17",
    "onnxmltools>=1.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "phase1: Phase 1 foundation tests",
    "phase2: Phase 2 data layer tests",
    "phase3: Phase 3 strategy engine tests",
    "phase4: Phase 4 risk management tests",
    "phase5: Phase 5 ML/AI enhancement tests",
    "phase6: Phase 6 execution engine tests",
    "phase7: Phase 7 backtesting engine tests",
    "phase8: Phase 8 API layer tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
